{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 542,
  "lineage": "0b53bcdf-e1ba-1fec-8346-f1d553acfb5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.30.1.50",
            "association_id": "eipassoc-0a7f3839d5cc642f4",
            "domain": "vpc",
            "id": "eipalloc-0ca6977ab14d1ae4c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ae64ca188930a6ee",
            "private_dns": "ip-10-30-1-50.eu-central-1.compute.internal",
            "private_ip": "10.30.1.50",
            "public_dns": "ec2-3-64-17-221.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.17.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.test-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0502e817a62226e03",
            "arn": "arn:aws:ec2:eu-central-1:041800145647:instance/i-08709843abc8b036c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08709843abc8b036c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gazal",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0ae64ca188930a6ee"
              }
            ],
            "primary_network_interface_id": "eni-0ae64ca188930a6ee",
            "private_dns": "ip-10-30-1-50.eu-central-1.compute.internal",
            "private_ip": "10.30.1.50",
            "public_ip": "3.64.17.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0df3506bb5a8d9f36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7f5fe4be717c814",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0686e225699baf104"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.test-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041800145647:internet-gateway/igw-0e6d84246f01554a1",
            "id": "igw-0e6d84246f01554a1",
            "owner_id": "041800145647",
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:loadbalancer/app/test-lb-tf/9ae9bde8627e16f9",
            "arn_suffix": "app/test-lb-tf/9ae9bde8627e16f9",
            "dns_name": "test-lb-tf-1260895693.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:loadbalancer/app/test-lb-tf/9ae9bde8627e16f9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0686e225699baf104"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03861a3cc8f578885"
              },
              {
                "subnet_id": "subnet-0e7f5fe4be717c814"
              }
            ],
            "subnets": [
              "subnet-03861a3cc8f578885",
              "subnet-0e7f5fe4be717c814"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0c905f33628aeaacc",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.test-subnet",
            "aws_subnet.test2-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:targetgroup/target/816350bf75ceda96",
            "arn_suffix": "targetgroup/target/816350bf75ceda96",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:targetgroup/target/816350bf75ceda96",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:targetgroup/target/816350bf75ceda96-20201213111833590800000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:041800145647:targetgroup/target/816350bf75ceda96",
            "target_id": "i-08709843abc8b036c"
          },
          "dependencies": [
            "aws_instance.web-server-instance",
            "aws_lb_target_group.testgr",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.test-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0ae64ca188930a6ee",
            "ipv6_address_count": 0,
            "mac_address": "02:1a:75:0f:5d:10",
            "private_ip": "10.30.1.50",
            "private_ips": [
              "10.30.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0686e225699baf104"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7f5fe4be717c814"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.test-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba6a2445c25a8c35",
            "owner_id": "041800145647",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6d84246f01554a1",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6d84246f01554a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test"
            },
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01af18bfb20ea9537",
            "route_table_id": "rtb-0ba6a2445c25a8c35",
            "subnet_id": "subnet-0e7f5fe4be717c814"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.test-route-table",
            "aws_subnet.test-subnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041800145647:security-group/sg-0686e225699baf104",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0686e225699baf104",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "041800145647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041800145647:subnet/subnet-0e7f5fe4be717c814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.30.1.0/24",
            "id": "subnet-0e7f5fe4be717c814",
            "map_public_ip_on_launch": false,
            "owner_id": "041800145647",
            "tags": {
              "Name": "test-subnet"
            },
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041800145647:subnet/subnet-03861a3cc8f578885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.30.10.0/24",
            "id": "subnet-03861a3cc8f578885",
            "map_public_ip_on_launch": false,
            "owner_id": "041800145647",
            "tags": {
              "Name": "test-subnet"
            },
            "vpc_id": "vpc-0c905f33628aeaacc"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041800145647:vpc/vpc-0c905f33628aeaacc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0b709599587e16784",
            "default_route_table_id": "rtb-066bd7ec52e8dca2e",
            "default_security_group_id": "sg-00c337972702d1c76",
            "dhcp_options_id": "dopt-3a843a50",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c905f33628aeaacc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-066bd7ec52e8dca2e",
            "owner_id": "041800145647"
          }
        }
      ]
    }
  ]
}